objects/AT_Workspace__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Expected_Book_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Expected Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Forecast_Status__c</fullName>
        <formula>TEXT(Opportunity__r.Forecast_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Forecast Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <description>Opportunity Source</description>
        <label>Security Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BD In</fullName>
                </value>
                <value>
                    <fullName>BD In (Channel Fulfilled)</fullName>
                </value>
                <value>
                    <fullName>BD Out</fullName>
                </value>
                <value>
                    <fullName>Channel In</fullName>
                </value>
                <value>
                    <fullName>Channel Out</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Unregistered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <description>Opportunity_Status of the Opportunity associated with the AT workspace</description>
        <formula>TEXT(Opportunity__r.Opportunity_Status__c)</formula>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Territory_Levels__c</fullName>
        <description>Concatenated Opportunity Territory Levels</description>
        <formula>Opportunity__r.Territory_Levels__c</formula>
        <label>Opportunity Territory Levels</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_WS_Update_History__c</fullName>
        <label>Opportunity WS Update History</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Workspace_ID_18__c</fullName>
        <description>Created as part of WR-01427 to get the 18digit Record ID in reports.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Workspace ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity associated with the workspace</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Workspaces</relationshipLabel>
        <relationshipName>AT_Workspace</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PSS_Additional_Comments__c</fullName>
        <description>To capture the additional comments.</description>
        <label>Workspace Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSS_Email__c</fullName>
        <description>Email address of the PSS</description>
        <formula>PSS__r.Email</formula>
        <label>PSS Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSS_Expected_Total_Value_000_s__c</fullName>
        <description>Total Expected Value (Product + Service)</description>
        <formula>AT_Expected_Product__c +  AT_Expected_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workspace Expected Total Value(000s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSS_Workspace_Status__c</fullName>
        <label>Workspace Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Sales Specialist (owner of AT Workspace)</description>
        <label>Workspace User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002BoxqEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability to Close%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Referenceable_Account__c</fullName>
        <inlineHelpText>Please indicate if this Account may be contacted as a reference Account for other customers.</inlineHelpText>
        <label>Referenceable Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes-Contact Workspace AM</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Term__c</fullName>
        <formula>IF( 
(ISBLANK(Number_of_Service_Months__c) || 
ISBLANK(TEXT(Workspace_Service_Source__c)) || 
ISBLANK(Workspace_Contract_Start_Date__c) || 
ISBLANK(Workspace_Contract_Expiration_Date__c) ), 
'', 
IF( 
(Number_of_Service_Months__c &gt;= 13) &amp;&amp; 
TEXT(Workspace_Service_Source__c) ='New', 
'Multiyear New', 
IF( 
(Number_of_Service_Months__c &gt;= 13) &amp;&amp; 
TEXT(Workspace_Service_Source__c) ='Renewal', 
'Multiyear Renewal', 
IF( 
(Number_of_Service_Months__c &lt; 13 &amp;&amp; 
TEXT(Workspace_Service_Source__c) ='New'), 
'Annual New', 
IF(Number_of_Service_Months__c &lt; 13 &amp;&amp; 
TEXT(Workspace_Service_Source__c) ='Renewal', 
'Annual Renewal',  '')
) 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Buying_Model__c</fullName>
        <description>To identify each software buying method, and report back to parties involved</description>
        <label>Software Buying Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advantage</fullName>
                    <isActive>false</isActive>
                    <label>Advantage</label>
                </value>
                <value>
                    <fullName>A la Carte</fullName>
                </value>
                <value>
                    <fullName>Choice EA (DC/Security)</fullName>
                </value>
                <value>
                    <fullName>Cisco One</fullName>
                    <isActive>false</isActive>
                    <label>Cisco One</label>
                </value>
                <value>
                    <fullName>Data Center EA</fullName>
                </value>
                <value>
                    <fullName>EA 1.0 (Security Only)</fullName>
                </value>
                <value>
                    <fullName>EA 2.0 (Collab/C1/DNA/AppD/Meraki)</fullName>
                </value>
                <value>
                    <fullName>Flex AU (Collab)</fullName>
                </value>
                <value>
                    <fullName>Flex EA (Collab Only)</fullName>
                </value>
                <value>
                    <fullName>SVP (Security Only)</fullName>
                    <label>SVP-Software Volume Purchase</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Offer__c</fullName>
        <description>If applicable, identify the solution or whole offer this technology is included in.</description>
        <label>Solution Offer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AT_Technology__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BE6K MidMarket</fullName>
                </value>
                <value>
                    <fullName>BYOD SMART SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>CISCO MANAGED SOLUTION</fullName>
                </value>
                <value>
                    <fullName>Cisco Metapod and CIS</fullName>
                </value>
                <value>
                    <fullName>Cisco OpenStack Private Cloud (COPC) - (formerly Metacloud)</fullName>
                </value>
                <value>
                    <fullName>CLOUD SERVICE CATALOG</fullName>
                </value>
                <value>
                    <fullName>CLOUD SOLUTION</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION ANALYTICS</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION AS A SERVICE</fullName>
                </value>
                <value>
                    <fullName>COLLABORATION EXPERIENCE SERVICES MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>Content Security New Business</fullName>
                </value>
                <value>
                    <fullName>Content Security Renewals</fullName>
                </value>
                <value>
                    <fullName>Cyber Threat Defense</fullName>
                </value>
                <value>
                    <fullName>DESKTOP VIRTUALIZATION</fullName>
                </value>
                <value>
                    <fullName>Docker Container</fullName>
                </value>
                <value>
                    <fullName>Drive to 9</fullName>
                </value>
                <value>
                    <fullName>Enterprise Agreement (EA)</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE BIG DATA</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE MOBILITY</fullName>
                </value>
                <value>
                    <fullName>FlexPod</fullName>
                </value>
                <value>
                    <fullName>HCS</fullName>
                </value>
                <value>
                    <fullName>Hitachi UCP Select</fullName>
                </value>
                <value>
                    <fullName>HOSTED COLLABORATION (HCS)</fullName>
                </value>
                <value>
                    <fullName>HYBRID CLOUD</fullName>
                </value>
                <value>
                    <fullName>IBM COS-OS</fullName>
                </value>
                <value>
                    <fullName>INTELLIGENT APPLICATION INFRASTRUCTURE</fullName>
                </value>
                <value>
                    <fullName>ISE Upsell</fullName>
                </value>
                <value>
                    <fullName>MOBILE ADVISOR</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of the Opportunity associated with the AT workspace</description>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Status__c</fullName>
        <description>To display the Status Message for the Workspace Sync with Opportunity</description>
        <label>Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_With_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked if PSS Workspace has to be Sync with the Opportunity</description>
        <inlineHelpText>Sync With Opportunity Checkbox to Sync the PSS Workspace with the Opportunity</inlineHelpText>
        <label>Sync With Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Cost_of_Ownerhip_TCO_Status__c</fullName>
        <description>Total Cost of Ownership status</description>
        <label>Total Cost of Ownerhip (TCO) Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Self Produced</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validate_Product_Service_Update__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Validate Product/Service Update</description>
        <label>Validate Product/Service Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workspace_Contract_Expiration_Date__c</fullName>
        <description>Workspace Contract Expiration Date</description>
        <label>Workspace Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workspace_Contract_Start_Date__c</fullName>
        <label>Workspace Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workspace_Count__c</fullName>
        <description>Workspace Count used for reporting</description>
        <formula>1</formula>
        <label>Workspace Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workspace_Expected_Book_Date_2__c</fullName>
        <description>Copy of Workspace Expected book date</description>
        <formula>AT_Expected_Book_Date__c</formula>
        <label>Workspace Expected Book Date (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workspace_Lost_Cancelled_Reason__c</fullName>
        <description>WR-0603-Renamed field label Booked/Lost/Cancelled Reason of the Opportunity</description>
        <inlineHelpText>Select the most important reason why this Opportunity was Booked, Lost or Cancelled.</inlineHelpText>
        <label>Workspace Booked/Lost/Cancelled Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Workspace_Stage__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>-</fullName>
                    <default>true</default>
                    <label>-</label>
                </value>
                <value>
                    <fullName>Booked - Cisco Security Brand Awareness</fullName>
                </value>
                <value>
                    <fullName>Booked - Cisco Threat Intelligence</fullName>
                </value>
                <value>
                    <fullName>Booked - Customer Experience: Account - Customer Relationship</fullName>
                </value>
                <value>
                    <fullName>Booked - Customer Experience: Ease of Use</fullName>
                </value>
                <value>
                    <fullName>Booked - Partner: Relationship - Profitability</fullName>
                </value>
                <value>
                    <fullName>Booked - Pricing: Better Value - TCO</fullName>
                </value>
                <value>
                    <fullName>Booked - Product: Better integration</fullName>
                </value>
                <value>
                    <fullName>Booked - Product: Localization</fullName>
                </value>
                <value>
                    <fullName>Booked - Product: Open solution</fullName>
                </value>
                <value>
                    <fullName>Booked - Product: Superior solution - Security efficacy</fullName>
                </value>
                <value>
                    <fullName>Booked - Services Offers</fullName>
                </value>
                <value>
                    <fullName>Cancelled - Duplicate Opportunity</fullName>
                </value>
                <value>
                    <fullName>Cancelled - Japan Only: Stock</fullName>
                </value>
                <value>
                    <fullName>Cancelled - No Bid</fullName>
                </value>
                <value>
                    <fullName>Cancelled - Opportunity created in error</fullName>
                </value>
                <value>
                    <fullName>Cancelled - Other</fullName>
                </value>
                <value>
                    <fullName>Lost - Competitor: Pricing</fullName>
                </value>
                <value>
                    <fullName>Lost - Competitor: Solution Limitation</fullName>
                </value>
                <value>
                    <fullName>Lost - Customer: Funding withdrawn</fullName>
                </value>
                <value>
                    <fullName>Lost - Customer: Pricing</fullName>
                </value>
                <value>
                    <fullName>Lost - Customer: Solution Limitation</fullName>
                </value>
                <value>
                    <fullName>Lost - Customer: Vendor Strategy</fullName>
                </value>
                <value>
                    <fullName>Lost - Customer Experience: User Interface Limitation</fullName>
                </value>
                <value>
                    <fullName>Lost - Lack of Localization Features</fullName>
                </value>
                <value>
                    <fullName>Lost - Other</fullName>
                </value>
                <value>
                    <fullName>Lost - Partner Profitability better with Competitor</fullName>
                </value>
                <value>
                    <fullName>Lost - Political Reason</fullName>
                </value>
                <value>
                    <fullName>Lost - Poor Product Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workspace_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workspace Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Workspaces</relationshipLabel>
        <relationshipName>Opportunity_Workspaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workspace_Service_Source__c</fullName>
        <description>Service Code</description>
        <label>Workspace Service Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Expand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workspace_Stage__c</fullName>
        <description>Opportunity Stage (1 - Prospect; 2 - Qualification; 3 - Proposal; 4 - Agreement; 5 - Closing)</description>
        <label>Workspace Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Prospect</fullName>
                </value>
                <value>
                    <fullName>2 - Qualification</fullName>
                </value>
                <value>
                    <fullName>3 - Proposal</fullName>
                </value>
                <value>
                    <fullName>4 - Agreement</fullName>
                </value>
                <value>
                    <fullName>5 - Closed Won</fullName>
                </value>
                <value>
                    <fullName>5 - Closed Cancelled</fullName>
                </value>
                <value>
                    <fullName>5 - Closed Lost</fullName>
                </value>
                <value>
                    <fullName>5 - Closing</fullName>
                    <isActive>false</isActive>
                    <label>5 - Closing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workspace_Status_Forecast_Status__c</fullName>
        <description>Combination of Workspace status and forecast status for reporting. WR-1367</description>
        <formula>IF(TEXT(PSS_Workspace_Status__c) = 'Booked', 'Booked',
   IF(TEXT(PSS_Workspace_Status__c) = 'Active', 'Active - ' &amp; TEXT(AT_Forecast_Status__c),
      IF(TEXT(PSS_Workspace_Status__c) = 'Cancelled', 'Cancelled',
         IF(TEXT(PSS_Workspace_Status__c) = 'Lost', 'Lost', '')
         )

     )

  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workspace Status - Forecast Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workspace_Technology_Line_Count__c</fullName>
        <description>Workspace Technology Line Count</description>
        <label>Workspace Technology Line Count</label>
        <summaryForeignKey>Workspace_Technology__c.Workspace__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Workspace_User_Alias__c</fullName>
        <description>Alias of the PSS</description>
        <formula>PSS__r.Alias</formula>
        <label>Workspace User Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workspace_User_Manager__c</fullName>
        <description>Workspace User Manager</description>
        <formula>IF(CONTAINS(PSS__r.Reporting_Up_Manager_Chain__c , $User.Alias),'True','False')</formula>
        <label>Workspace User Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workspace_User_Title__c</fullName>
        <description>Workspace user Title</description>
        <formula>PSS__r.Title</formula>
        <label>Workspace User Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workspace_Value_Range__c</fullName>
        <label>Workspace Value Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 5 Million</fullName>
                    <default>true</default>
                    <label>Less than 5 Million</label>
                </value>
                <value>
                    <fullName>05 Million-10 Million</fullName>
                </value>
                <value>
                    <fullName>10 Million-50 Million</fullName>
                </value>
                <value>
                    <fullName>50 Million-100 Million</fullName>
                </value>
                <value>
                    <fullName>100 Million-500 Million</fullName>
                </value>
                <value>
                    <fullName>Above 500 Million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workspace_Win_Loss_Comments__c</fullName>
        <description>Added as part of WR-01105.</description>
        <label>Workspace Win/Loss Comments</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workspace_Won_Lost_Date__c</fullName>
        <description>Workspace Won/LostDate</description>
        <label>Workspace Won/Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>expected_book_date__c</fullName>
        <description>Expected Book Date of the Opportunity associated with the AT workspace</description>
        <formula>Opportunity__r.CloseDate</formula>
        <label>expected book date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>expected_product_000__c</fullName>
        <description>Expected Product Amount of the Opportunity associated with the AT workspace</description>
        <formula>Opportunity__r.Expected_Product__c</formula>
        <label>expected product($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>expected_service_000__c</fullName>
        <description>Expected Service($'000) of the Opportunity associated with the AT workspace</description>
        <formula>Opportunity__r.Expected_Service__c</formula>
        <label>expected service($000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>forecast_status__c</fullName>
        <description>Forecast Status of the Opportunity associated with the AT workspace</description>
        <formula>TEXT(Opportunity__r.Forecast_Status__c)</formula>
        <label>forecast status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value_range_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>value range check</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Workspace</label>
    <nameField>
        <label>Opportunity Workspace Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Workspaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>ALL_Active_WS_30_Days_Past_Book_Date</fullName>
        <columns>PSS__c</columns>
        <columns>Account_Workspace_Link__c</columns>
        <columns>AT_Expected_Book_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PSS_Expected_Total_Value_000_s__c</columns>
        <columns>AT_Forecast_Status__c</columns>
        <columns>PSS_Workspace_Status__c</columns>
        <columns>Workspace_Stage__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSS_Workspace_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>AT_Expected_Book_Date__c</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:29</value>
        </filters>
        <filters>
            <field>My_Workspace__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>ALL Active WS 30 Days Past Book Date</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APJC_FY19_Q4_CKC_Commit</fullName>
        <columns>Fiscal_Period_PSS__c</columns>
        <columns>AT_Forecast_Status__c</columns>
        <columns>Deal_ID__c</columns>
        <columns>Account_Opportunity_Workspace__c</columns>
        <columns>PSS__c</columns>
        <columns>PSS_Expected_Total_Value_000_s__c</columns>
        <columns>AT_Optional_1__c</columns>
        <columns>AT_Optional_2__c</columns>
        <columns>AT_Expected_Book_Date__c</columns>
        <columns>expected_product_000__c</columns>
        <columns>expected_service_000__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSS_Workspace_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>S+CC -- S+CC Solutions</value>
        </filters>
        <filters>
            <field>Workspace_User_Alias__c</field>
            <operation>equals</operation>
            <value>yhelmy,dalbir,zpaskale,supamech</value>
        </filters>
        <filters>
            <field>Fiscal_Period_PSS__c</field>
            <operation>equals</operation>
            <value>Q4-2019</value>
        </filters>
        <filters>
            <field>AT_Forecast_Status__c</field>
            <operation>equals</operation>
            <value>Commit</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>APJC FY19 Q4 CKC Commit</label>
    </listViews>
    <listViews>
        <fullName>APJC_FY19_Q4_CKC_Not_Forecastable</fullName>
        <columns>Fiscal_Period_PSS__c</columns>
        <columns>AT_Forecast_Status__c</columns>
        <columns>Deal_ID__c</columns>
        <columns>Account_Opportunity_Workspace__c</columns>
        <columns>PSS__c</columns>
        <columns>PSS_Expected_Total_Value_000_s__c</columns>
        <columns>AT_Optional_1__c</columns>
        <columns>AT_Optional_2__c</columns>
        <columns>AT_Expected_Book_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSS_Workspace_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>S+CC -- S+CC Solutions</value>
        </filters>
        <filters>
            <field>Workspace_User_Alias__c</field>
            <operation>equals</operation>
            <value>yhelmy,dalbir,zpaskale,supamech</value>
        </filters>
        <filters>
            <field>Fiscal_Period_PSS__c</field>
            <operation>equals</operation>
            <value>Q4-2019</value>
        </filters>
        <filters>
            <field>AT_Forecast_Status__c</field>
            <operation>equals</operation>
            <value>Not Forecastable</value>
        </filters>
        <filters>
            <field>Opportunity_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>APJC FY19 Q4 CKC Not Forecastable</label>
    </listViews>
    <listViews>
        <fullName>Active_Security_WS_with_Opt_2_User</fullName>
        <columns>AT_Optional_2__c</columns>
        <columns>PSS__c</columns>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>AT_Team__c</columns>
        <columns>PSS_Workspace_Status__c</columns>
        <columns>AT_Forecast_Status__c</columns>
        <columns>Workspace_Stage__c</columns>
        <columns>AT_Expected_Book_Date__c</columns>
        <columns>AT_Expected_Product__c</columns>
        <columns>Opportunity_Status__c</columns>
        <columns>AT_Sub_Technology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSS_Workspace_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>AT_Team__c</field>
            <operation>startsWith</operation>
            <value>SEC</value>
        </filters>
        <filters>
            <field>AT_Optional_2__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Active Security WS with Opt 2 User</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_WS_Stephen_Lansley</fullName>
        <columns>Fiscal_Month_PSS__c</columns>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>AT_Expected_Book_Date__c</columns>
        <columns>AT_Forecast_Status__c</columns>
        <columns>Probability__c</columns>
        <columns>AT_Expected_Service__c</columns>
        <columns>PSS_Expected_Total_Value_000_s__c</columns>
        <columns>PSS_Workspace_Status__c</columns>
        <columns>Workspace_Stage__c</columns>
        <columns>PSS_Additional_Comments__c</columns>
        <columns>AT_Comments__c</columns>
        <columns>PSS__c</columns>
        <columns>Opportunity_Territory_Levels__c</columns>
        <columns>AT_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Workspace_User_Alias__c</field>
            <operation>equals</operation>
            <value>slansley</value>
        </filters>
        <filters>
            <field>PSS_Workspace_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active WS - Stephen Lansley</label>
        <language>en_US</language>
        <sharedTo>
            <group>GSSO_SLANSLEY</group>
        </sharedTo>
    </listViews>
</CustomObject>